language/move-lang/tests/move_check/expansion/number_literal_too_long_u8.move
module 0x42::M {
    fun long_u8() {
        0x0FFu8;
        0x1FFu8;
        255u8;
        256u8;
    }
}
